traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/yolei_path.rpy", line 66, in script
    return bottleKnowledge = False
  File "game/yolei_path.rpy", line 66
    bottleKnowledge = False
                    ^^^^^^^
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/yolei_path.rpy", line 66, in script
    return bottleKnowledge = False
  File "renpy/ast.py", line 1697, in execute
    renpy.store._return = renpy.python.py_eval(self.expression)
                          ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1306, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1263, in py_compile
    raise e
  File "renpy/python.py", line 1193, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/yolei_path.rpy", line 66
    bottleKnowledge = False
                    ^^^^^^^
SyntaxError: invalid syntax

Windows-11-10.0.26200-SP0 AMD64
Ren'Py 8.5.3.26051504
Emi VN 1.0
Mon Jun  1 18:29:05 2026
